test/parsing/errors/output-var-equals.boa
o := output sum of int;
o << 1;
